# semi_supervised_learning

./: .gitignore  README.md  my_optuna_study.db  pyproject.toml  semi_supervised_training.ipynb  semi_supervised_training_with_optuna.ipynb  semi_supervised_with_ml_flow.py  semi_supervised_with_ml_flow_mean_teacher.py
data/: synthetic_dataset.parquet
ignore/: final_result.ipynb  semi_supervised_training_with_optuna.ipynb  semi_supervised_with_ml_flow.py  semi_supervised_with_ml_flow_mean_teacher.py
mlruns/0/: meta.yaml
mlruns/0/6c3a6b8375e94d99854063abe7f30d9f/: meta.yaml
mlruns/0/85fb3b1c541249fea3e495a7ba8066bb/: meta.yaml
mlruns/0/b2a5274493034ebcb9b5e09cc7d3fb37/: meta.yaml
mlruns/0/b5643c9d37e54c6abd3b31b6c5282166/: meta.yaml
mlruns/252112252091756898/: meta.yaml
mlruns/252112252091756898/2040f5bf04914e3d937f8829771430fd/: meta.yaml
mlruns/252112252091756898/7fc20ff56393445eb8f83b90102c321b/: meta.yaml
mlruns/456677013921700401/: meta.yaml
mlruns/456677013921700401/c177356cad61429482b158ec9d5e1e2e/: meta.yaml
mlruns/923788924553387472/: meta.yaml
mlruns/923788924553387472/004d0b85a3614375821f4016c976131c/: meta.yaml
mlruns/923788924553387472/01e480849e34409e9a1f63335a9e6cfb/: meta.yaml
mlruns/923788924553387472/02cbd84a547b4dcb8ef42d2401a49869/: meta.yaml
mlruns/923788924553387472/066df332981341998f9fc454c090370c/: meta.yaml
mlruns/923788924553387472/0723289ce6b74510ae7fee54da3b4d82/: meta.yaml
src/semi_supervised_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/semi_supervised_learning/utils/: test.py  (+3 more)
(+613 files in other folders)
