[project]
name = "semi-supervised-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pip>=25.2",
    "plotly>=6.3.0",
    "polars>=1.34.0",
    "ray>=2.50.0",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
